--- a/Irrigation/oneESP/platformio.ini
+++ b/Irrigation/oneESP/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	adafruit/DHT sensor library@^1.4.6
 	chuckbell/MySQL Connector Arduino@^1.2.0
+	paulstoffregen/Time@^1.6.1
